[package]
name = "pypes"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version="4.4.7", features = ["derive"] }
daemonize = "0.5.0"
directories = "5.0.1"
libc = "0.2.149"
minijinja = "1.0.10"
pickledb = "0.5.1"
serde = { version = "1.0.191", features = ["derive"] }
serde_json = "1.0.108"
tokio = {version = "1.33.0", features = ["full"] }
docker-api = "0.14"
futures = "0.3.1"
axum = "0.7.2"
tower = "0.4.13"
http-body-util = "0.1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
wiremock = "0.5"
